src/objects/SBQQ__ImportColumn__c.object
<CustomObject>
    <customHelpPage>SBQQ__ImportFormatHelp</customHelpPage>
    <fields>
        <fullName>SBQQ__ColumnIndex__c</fullName>
        <description>A numeric index value that represents the location of the column. Column index must start from 1.</description>
        <inlineHelpText>Enter a numeric index value that represents the location of the column. Column index must start from 1.</inlineHelpText>
        <label>Column Index</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>This is the API Name.</description>
        <inlineHelpText>Enter the API Name.</inlineHelpText>
        <label>Field Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Partner Discount</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ImportFormat__c</fullName>
        <description>The format in which your records are being imported.</description>
        <inlineHelpText>Select the format in which your records will be imported.</inlineHelpText>
        <label>Import Format</label>
        <referenceTo>SBQQ__ImportFormat__c</referenceTo>
        <relationshipLabel>Import Columns</relationshipLabel>
        <relationshipName>ImportColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This column represents a unique key column.</description>
        <inlineHelpText>Select if this column should be a unique key column.</inlineHelpText>
        <label>Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Import Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Column_index_must_start_from_1</fullName>
        <active>true</active>
        <description>Column Index must start from 1.</description>
        <errorConditionFormula>If ( SBQQ__ColumnIndex__c &lt;= 0, true, false)</errorConditionFormula>
        <errorDisplayField>SBQQ__ColumnIndex__c</errorDisplayField>
        <errorMessage>Column Index must start from 1.</errorMessage>
    </validationRules>
</CustomObject>